nextcloud/network-policy-nextcloud-allow-egress-from-nginx-to-php.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nextcloud-allow-egress-from-nginx-to-php
  namespace: nextcloud
spec:
  podSelector:
    matchLabels:
      app: nextcloud
      tier: frontend
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: nextcloud
              tier: backend
      ports:
        - protocol: TCP
          port: 9000
